--- a/contact.html
+++ b/contact.html
@@ -173,6 +173,7 @@
                                             class="form-control border-0"
                                             id="name"
                                             placeholder="Ваше имя"
+                                            required
                                         />
                                         <label for="name">Ф.И.О.</label>
                                     </div>
@@ -184,6 +185,7 @@
                                             class="form-control border-0"
                                             id="email"
                                             placeholder="Ваш email"
+                                            required
                                         />
                                         <label for="email"
                                             >Электронная почта</label
@@ -197,6 +199,7 @@
                                             class="form-control border-0"
                                             id="subject"
                                             placeholder="Телефон"
+                                            required
                                         />
                                         <label for="subject"
                                             >Телефон для связи</label
@@ -210,6 +213,7 @@
                                             placeholder="Опишите ваш проект: тип дома, площадь, ориентировочный бюджет, этапы, где нужна помощь"
                                             id="message"
                                             style="height: 160px"
+                                            required
                                         ></textarea>
                                         <label for="message">Сообщение</label>
                                     </div>
