--- a/index.html
+++ b/index.html
@@ -338,32 +338,6 @@
                     </p>
                 </div>
                 <div class="tab-class text-center">
-                    <ul
-                        class="nav nav-pills d-inline-flex justify-content-center mb-5"
-                    >
-                        <li class="nav-item">
-                            <a
-                                class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill active"
-                                data-bs-toggle="pill"
-                                href="#NationalTab-1"
-                            >
-                                <span class="text-dark" style="width: 250px"
-                                    >Дома под ключ</span
-                                >
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a
-                                class="d-flex py-2 mx-3 border border-primary bg-light rounded-pill"
-                                data-bs-toggle="pill"
-                                href="#InternationalTab-2"
-                            >
-                                <span class="text-dark" style="width: 250px"
-                                    >Планирование и технологии</span
-                                >
-                            </a>
-                        </li>
-                    </ul>
                     <div class="tab-content">
                         <div
                             id="NationalTab-1"
@@ -481,100 +455,6 @@
                                                     тепло, вентиляция, электрика
                                                 </h5>
                                             </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div
-                            id="InternationalTab-2"
-                            class="tab-pane fade show p-0"
-                        >
-                            <div
-                                class="InternationalTour-carousel owl-carousel"
-                            >
-                                <div class="international-item">
-                                    <img
-                                        src="img/explore-tour-7.jpg"
-                                        class="img-fluid w-100 rounded"
-                                        alt="Image"
-                                    />
-                                    <div class="international-content">
-                                        <div class="international-info">
-                                            <h5
-                                                class="text-white text-uppercase mb-2"
-                                            >
-                                                Юридическое сопровождение и
-                                                договоры под ключ
-                                            </h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="international-item">
-                                    <img
-                                        src="img/explore-tour-8.jpg"
-                                        class="img-fluid w-100 rounded"
-                                        alt="Image"
-                                    />
-                                    <div class="international-content">
-                                        <div class="international-info">
-                                            <h5
-                                                class="text-white text-uppercase mb-2"
-                                            >
-                                                BIM-проектирование и цифровая
-                                                смета
-                                            </h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="international-item">
-                                    <img
-                                        src="img/explore-tour-9.jpg"
-                                        class="img-fluid w-100 rounded"
-                                        alt="Image"
-                                    />
-                                    <div class="international-content">
-                                        <div class="international-info">
-                                            <h5
-                                                class="text-white text-uppercase mb-2"
-                                            >
-                                                Энергоэффективные решения для
-                                                частного дома
-                                            </h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="international-item">
-                                    <img
-                                        src="img/explore-tour-10.jpg"
-                                        class="img-fluid w-100 rounded"
-                                        alt="Image"
-                                    />
-                                    <div class="international-content">
-                                        <div class="international-info">
-                                            <h5
-                                                class="text-white text-uppercase mb-2"
-                                            >
-                                                Системы «умный дом» и
-                                                автоматизация
-                                            </h5>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="international-item">
-                                    <img
-                                        src="img/explore-tour-11.jpg"
-                                        class="img-fluid w-100 rounded"
-                                        alt="Image"
-                                    />
-                                    <div class="international-content">
-                                        <div class="international-info">
-                                            <h5
-                                                class="text-white text-uppercase mb-2"
-                                            >
-                                                Экологичные материалы и
-                                                долговечность конструкций
-                                            </h5>
                                         </div>
                                     </div>
                                 </div>
@@ -706,36 +586,6 @@
         </div>
         <!-- Packages End -->
 
-        <!-- Tour Booking Start -->
-        <div class="container-fluid booking py-5">
-            <div class="container py-5">
-                <div class="row g-5 align-items-center">
-                    <div class="col-lg-12">
-                        <h1 class="text-white mb-4">
-                            Управляйте строительством с уверенностью
-                        </h1>
-                        <p class="text-white mb-4">
-                            Профессиональный подход к строительству дома под
-                            ключ — это сочетание грамотного планирования,
-                            точного расчёта бюджета и контроля качества. Мы
-                            помогаем на всех этапах: от первичной проектной
-                            консультации и выбора материалов до приёмки работ и
-                            передачи объекта с полным комплектом документов.
-                        </p>
-                        <p class="text-white mb-4">
-                            Получите практические рекомендации по оптимизации
-                            затрат, подбору энергоэффективных решений и
-                            внедрению современных технологий (BIM, автоматизация
-                            инженерии, «умный дом»). Наши специалисты обеспечат
-                            юридическую чистоту проекта, прозрачность сметы и
-                            соблюдение сроков.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Tour Booking End -->
-
         <!-- Blog Start -->
         <div class="container-fluid blog py-5">
             <div class="container py-5">
@@ -767,6 +617,7 @@
                                 </div>
                                 <div
                                     class="blog-info d-flex align-items-center border border-start-0 border-end-0"
+                                    style="background: #333"
                                 >
                                     <small
                                         class="flex-fill text-center border-end py-2"
@@ -823,6 +674,7 @@
                                 </div>
                                 <div
                                     class="blog-info d-flex align-items-center border border-start-0 border-end-0"
+                                    style="background: #333"
                                 >
                                     <small
                                         class="flex-fill text-center border-end py-2"
@@ -870,48 +722,6 @@
             </div>
         </div>
         <!-- Blog End -->
-
-        <!-- Subscribe Start -->
-        <div class="container-fluid subscribe py-5">
-            <div class="container text-center py-5">
-                <div class="mx-auto text-center" style="max-width: 900px">
-                    <h5 class="subscribe-title px-3">Subscribe</h5>
-                    <h1 class="text-white mb-4">Our Newsletter</h1>
-                    <p class="text-white mb-5">
-                        Stay informed and empowered with our monthly newsletter,
-                        where we bring you the latest updates, expert insights,
-                        and practical tips on investing and trading. Whether
-                        you're looking to enhance your forex trading skills,
-                        learn how to trade on MetaTrader 4 (MT4), or plan for a
-                        secure retirement, our newsletter is packed with
-                        valuable content tailored to your financial journey. By
-                        subscribing, you'll gain access to exclusive resources,
-                        timely market analysis, and strategies that can help you
-                        make informed decisions and grow your wealth. Join our
-                        community of savvy investors and traders, and take the
-                        next step toward financial success.
-                    </p>
-                    <div class="position-relative mx-auto">
-                        <input
-                            class="form-control border-primary rounded-pill w-100 py-3 ps-4 pe-5"
-                            type="text"
-                            placeholder="Your email"
-                            id="email"
-                        />
-                        <button
-                            type="button"
-                            id="submit"
-                            onclick="sendForm()"
-                            class="btn btn-primary rounded-pill position-absolute top-0 end-0 py-2 px-4 mt-2 me-2"
-                        >
-                            Subscribe
-                        </button>
-                    </div>
-                    <div id="result" style="color: red; font-size: 12px"></div>
-                </div>
-            </div>
-        </div>
-        <!-- Subscribe End -->
 
         <!-- Footer Start -->
         <div class="container-fluid footer py-5">
